--- a/src/components/Styles/Navigation.css
+++ b/src/components/Styles/Navigation.css
@@ -3,9 +3,9 @@
 
 .panel-bg {
   width: 100vw;
-  height: 5.938rem;
-  margin: 0;
-  padding: 1.438rem 0 1.688rem 6.25rem;
+  height: 4.938rem;
+  margin: 0 0 3rem 0;
+  padding: 1.438rem 0 1.688rem 5.25rem;
   background-color: #fff;
 }
 
