--- a/src/components/Styles/AddBook.css
+++ b/src/components/Styles/AddBook.css
@@ -3,17 +3,20 @@
 .bookform {
   display: flex;
   flex-direction: column;
+  margin: 2rem 0 0 0;
+  padding: 0;
 }
 
 .formbook {
   display: flex;
   flex-direction: row;
+  margin-bottom: 1rem;
 }
 
 .formHeader {
   width: 15.875rem;
   height: 1.5rem;
-  margin: 1.813rem 32.75rem 1.188rem 6.125rem;
+  margin: 0.813rem 32.75rem 0.188rem 6.125rem;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.25rem;
   font-weight: bold;
@@ -52,4 +55,12 @@
   border-radius: 3px;
   background-color: #0290ff;
   color: #fff;
+  border: none;
+}
+
+hr {
+  width: 90%;
+  border: 1px solid #e8e8e8;
+  margin: auto;
+  padding: 0;
 }
