--- a/src/components/Styles/AddBook.css
+++ b/src/components/Styles/AddBook.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@100;300;400;500;600;700;800;900&family=Montserrat:wght@700&family=Roboto:wght@100;300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300&display=swap');
 
 .bookform {
   display: flex;
