--- a/src/components/Styles/Bookcard.css
+++ b/src/components/Styles/Bookcard.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@100;300;400;500;600;700;800;900&family=Montserrat:wght@700&family=Roboto:wght@100;300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300&display=swap');
 
 .booksection {
   display: flex;
@@ -36,7 +38,7 @@
   width: 20.313rem;
   height: 1.813rem;
   margin: 0.188rem 10.188rem 0.5rem 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-size: 1.375rem;
   font-weight: bold;
   font-stretch: normal;
@@ -66,6 +68,13 @@
   margin-right: 1rem;
   color: #4386bf;
   height: 1.188rem;
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
 
 .middle {
@@ -93,16 +102,28 @@
 }
 
 .currentchapter {
+  font-family: 'Roboto Slab', serif;
   color: #807d7d;
-  font-weight: 400;
-  height: 1.125rem;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
   margin-bottom: 1rem;
+  opacity: 0.5;
 }
 
 .chapter {
   color: #121212;
   height: 1.313rem;
   margin-bottom: 1rem;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.4px;
 }
 
 .updateBtn {
@@ -113,6 +134,14 @@
   background-color: #0290ff;
   color: #fff;
   border: none;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  font-family: 'Roboto Slab', serif;
 }
 
 .oval {
