--- a/src/components/Styles/Navigation.css
+++ b/src/components/Styles/Navigation.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@100;300;400;500;600;700;800;900&family=Montserrat:wght@700&family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 
 .panel-bg {
   width: 100vw;
@@ -12,7 +12,7 @@
 .Bookstore-CMS {
   width: 15rem;
   height: 2.313rem;
-  margin: 0.375rem 2.938rem 0.125rem 0;
+  margin: 0.375rem 2.938rem 0.125rem 4.725rem;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.875rem;
   font-weight: bold;
