update font family for complete

--- a/src/components/Styles/Bookcard.css
+++ b/src/components/Styles/Bookcard.css
@@ -99,6 +99,14 @@
 
 .complete {
   color: #807d7d;
+  opacity: 0.5;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
 
 .currentchapter {
