--- a/src/components/Styles/AddBook.css
+++ b/src/components/Styles/AddBook.css
@@ -30,7 +30,7 @@
 }
 
 .Lesson-Panel {
-  width: 31.5rem;
+  width: 21.5rem;
   height: 2.813rem;
   margin: 1.188rem 2.125rem 0 6.125rem;
   padding: 0.813rem 10.688rem 0.813rem 1.063rem;
@@ -40,10 +40,20 @@
 }
 
 .Lesson-Pane2 {
-  width: 21.5rem;
+  width: 15.5rem;
   height: 2.813rem;
   margin: 1.188rem 2.125rem 0 0;
   padding: 0.813rem 10.688rem 0.813rem 1.063rem;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+}
+
+.Lesson-Pane3 {
+  width: 15.5rem;
+  height: 2.813rem;
+  margin: 1.188rem 2.125rem 0 0;
+  padding: 0.813rem 5.688rem 0.813rem 0.563rem;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
@@ -65,4 +75,26 @@ hr {
   border: 1px solid #e8e8e8;
   margin: auto;
   padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .formbook {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .Lesson-Panel {
+    width: auto;
+    margin: auto;
+  }
+
+  .formHeader {
+    margin-bottom: 4%;
+  }
+
+  .Lesson-Pane2 {
+    width: auto;
+    margin: 3% auto;
+  }
 }
