--- a/src/components/Styles/Navigation.css
+++ b/src/components/Styles/Navigation.css
@@ -40,6 +40,11 @@
   text-decoration: none;
 }
 
+.panel-bg .active {
+  text-decoration: underline;
+  color: orange;
+}
+
 .BOOKS {
   width: 3.688rem;
   height: 1rem;
@@ -69,4 +74,25 @@
 .image {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .panel-bg {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    height: 15vh;
+  }
+
+  .Bookstore-CMS {
+    margin: auto 0.1rem;
+  }
+
+  .BOOKS {
+    margin: auto 0.1rem;
+  }
+
+  .CATEGORIES {
+    margin: auto;
+  }
 }
